# gandi-dns-update

./: Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: main.yml
src/: gandi_client.rs  main.rs
